config/network-policy/default-deny-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-ingress
  namespace: operator-foundry-system
spec:
  podSelector: {}
  policyTypes:
  - Ingress
